# dupegun

./: .gitignore  README.md  pyproject.toml
dupegun/: actions.py  cli.py  config.py  plugins.py  reporter.py  restore.py  scanner.py  tui.py  watcher.py
tests/: test_scanner.py  test_v200.py  test_v210.py
