[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dupegun"
version = "1.3.0"
description = "Cross-platform duplicate file finder and cleaner"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["duplicate", "files", "cli", "disk", "cleaner", "cross-platform"]
authors = [
    {name = "Prasanna B", email = "prasannab806@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/Prasanna-Balakrishnan/dupegun"
Repository = "https://github.com/Prasanna-Balakrishnan/dupegun"
"Bug Tracker" = "https://github.com/Prasanna-Balakrishnan/dupegun/issues"

[project.scripts]
dupegun = "dupegun.cli:main"