[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dupegun"
version = "2.0.0"
description = "Cross-platform duplicate file finder and cleaner"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["duplicate", "files", "cli", "disk", "cleaner", "cross-platform"]
authors = [
    {name = "Prasanna B", email = "prasannab806@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
tui   = ["textual>=0.50"]
watch = ["watchdog>=3.0"]
all   = ["textual>=0.50", "watchdog>=3.0"]

[project.urls]
Homepage   = "https://github.com/Prasanna-Balakrishnan/dupegun"
Repository = "https://github.com/Prasanna-Balakrishnan/dupegun"
"Bug Tracker" = "https://github.com/Prasanna-Balakrishnan/dupegun/issues"

[project.scripts]
dupegun = "dupegun.cli:main"